Convert README to UTF-8. README をユニコードに変換。

--- a/xalnl/README
+++ b/xalnl/README
@@ -1,44 +1,44 @@
-UNIX ╚╟д╟д╣бг
+UNIX чЙИуБзуБЩуАВ
 
-**** едеєе╣е╚б╝еы╩¤╦б ****
+**** уВдуГ│уВ╣уГИуГ╝уГлцЦ╣ц│Х ****
 
-1. ░╡╜╠д╡дьд┐е╒ебедеыдЄ▓Є┼рд╣дыбг
-   (д│д╬е╒ебедеыдЄ╕лд╞дддыд╩дщбвдтдж║╤дєд╟ддд▐д╣бг)
+1. хЬзч╕оуБХуВМуБЯуГХуВбуВдуГлуВТшзгхЗНуБЩуВЛуАВ
+   (уБУуБоуГХуВбуВдуГлуВТшжЛуБжуБДуВЛуБкуВЙуАБуВВуБЖц╕ИуВУуБзуБДуБ╛уБЩуАВ)
 
   tar zxvf xalnl-3.3.*.tar.gz
 
-2. ▓Є┼рд╖д┐е╟егеьепе╚еъд╦╞■ды
+2. шзгхЗНуБЧуБЯуГЗуВгуГмуВпуГИуГкуБлхЕеуВЛ
 
   cd xalnl-3.3.*
 
-3. root д╦д╩дыбг
+3. root уБлуБкуВЛуАВ
   su -
 
-4. Make д╣дыбг
+4. Make уБЩуВЛуАВ
 
   ./configure
   make
   make install
 
-5. root дЄд╠д▒дыбг
+5. root уВТуБмуБСуВЛуАВ
   exit
 
-6. е▐е╦ехевеыдЄ╞╔др
+6. уГЮуГЛуГеуВвуГлуВТшкнуВА
 
   man xalnl
 
-7. е▓б╝ердЄ╗╧дсды
+7. уВ▓уГ╝уГауВТхзЛуВБуВЛ
 
   xalnl
 
-╞░║юе┴езе├епд╧▓╝╡нд╬┤─╢нд╟╣╘д╩ддд▐д╖д┐бг
+хЛХф╜ЬуГБуВзуГГуВпуБпф╕ЛшиШуБочТ░хвГуБзшбМуБкуБДуБ╛уБЧуБЯуАВ
 
 Fedora Core 8
 Debian GNU Linux (etch)
 MacOS X 10.5.2
 WindowsXP
 
-джд▐дп╣╘длд╩длд├д┐дщ▓╝╡нд╪бв▒є╬╕д╩дп╧в═э▓╝д╡ддбг
+уБЖуБ╛уБПшбМуБЛуБкуБЛуБгуБЯуВЙф╕ЛшиШуБ╕уАБщБацЕоуБкуБПщАгч╡бф╕ЛуБХуБДуАВ
 
 e-mail:
 bowkenken@users.sourceforge.jp
