--- a/alnl/README
+++ b/alnl/README
@@ -1,38 +1,38 @@
-UNIX ╚╟д╟д╣бг
+UNIX чЙИуБзуБЩуАВ
 
-**** едеєе╣е╚б╝еы╩¤╦б ****
+**** уВдуГ│уВ╣уГИуГ╝уГлцЦ╣ц│Х ****
 
-1. ░╡╜╠д╡дьд┐е╒ебедеыдЄ▓Є┼рд╣дыбг
-   (д│д╬е╒ебедеыдЄ╕лд╞дддыд╩дщбвдтдж║╤дєд╟ддд▐д╣бг)
+1. хЬзч╕оуБХуВМуБЯуГХуВбуВдуГлуВТшзгхЗНуБЩуВЛуАВ
+   (уБУуБоуГХуВбуВдуГлуВТшжЛуБжуБДуВЛуБкуВЙуАБуВВуБЖц╕ИуВУуБзуБДуБ╛уБЩуАВ)
 
   tar zxvf lnl-2.1.*.tar.gz
 
-2. ▓Є┼рд╖д┐е╟егеьепе╚еъд╦╞■ды
+2. шзгхЗНуБЧуБЯуГЗуВгуГмуВпуГИуГкуБлхЕеуВЛ
 
   cd lnl-2.1.*
 
-3. root д╦д╩дыбг
+3. root уБлуБкуВЛуАВ
   su -
 
-4. Make д╣дыбг
+4. Make уБЩуВЛуАВ
 
   ./configure
   make
   make install
 
-5. root дЄд╠д▒дыбг
+5. root уВТуБмуБСуВЛуАВ
   exit
 
-6. е▐е╦ехевеыдЄ╞╔др
+6. уГЮуГЛуГеуВвуГлуВТшкнуВА
 
   man lnl
   man lnl-faq
 
-7. е▓б╝ердЄ╗╧дсды
+7. уВ▓уГ╝уГауВТхзЛуВБуВЛ
 
   lnl
 
-╞░║юе┴езе├епд╧▓╝╡нд╬┤─╢нд╟╣╘д╩ддд▐д╖д┐бг
+хЛХф╜ЬуГБуВзуГГуВпуБпф╕ЛшиШуБочТ░хвГуБзшбМуБкуБДуБ╛уБЧуБЯуАВ
 
 Fedora Core 2
 Red Hat Linux 9
@@ -41,7 +41,7 @@ NetBSD 1.5.2
 MacOS X 10.2
 WindowsXP
 
-джд▐дп╣╘длд╩длд├д┐дщ▓╝╡нд╪бв▒є╬╕д╩дп╧в═э▓╝д╡ддбг
+уБЖуБ╛уБПшбМуБЛуБкуБЛуБгуБЯуВЙф╕ЛшиШуБ╕уАБщБацЕоуБкуБПщАгч╡бф╕ЛуБХуБДуАВ
 
 e-mail:
 bowkenken@users.sourceforge.jp
