--- a/xalnl/src/.deps/PcgCharGraph.Po
+++ b/xalnl/src/.deps/PcgCharGraph.Po
@@ -55,9 +55,8 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/i386-linux-gnu/asm/ioctl.h /usr/include/asm-generic/ioctl.h \
  /usr/include/i386-linux-gnu/bits/ioctl-types.h \
  /usr/include/i386-linux-gnu/sys/ttydefaults.h misc.h turn.h msg-t.h \
- music-kind.h sound-kind.h extern.h PcgCharGraph.h FileList.h \
- /usr/include/dirent.h /usr/include/i386-linux-gnu/bits/dirent.h \
- GtkWSCstring.h /usr/include/c++/4.9/string \
+ music-kind.h sound-kind.h extern.h PcgCharGraph.h GtkWSCstring.h \
+ /usr/include/c++/4.9/string \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/cpu_defines.h \
@@ -102,8 +101,10 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/i386-linux-gnu/bits/sched.h \
  /usr/include/i386-linux-gnu/bits/setjmp.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h \
- /usr/include/c++/4.9/bits/basic_string.tcc GlobalVar.h \
- /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
+ /usr/include/c++/4.9/bits/basic_string.tcc FileList.h \
+ /usr/include/dirent.h /usr/include/i386-linux-gnu/bits/dirent.h \
+ GlobalVar.h /usr/include/gtk-2.0/gtk/gtk.h \
+ /usr/include/gtk-2.0/gdk/gdk.h \
  /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
  /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
  /usr/include/glib-2.0/gio/gioenums.h /usr/include/glib-2.0/glib-object.h \
@@ -812,12 +813,6 @@ extern.h:
 
 PcgCharGraph.h:
 
-FileList.h:
-
-/usr/include/dirent.h:
-
-/usr/include/i386-linux-gnu/bits/dirent.h:
-
 GtkWSCstring.h:
 
 /usr/include/c++/4.9/string:
@@ -925,6 +920,12 @@ GtkWSCstring.h:
 /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h:
 
 /usr/include/c++/4.9/bits/basic_string.tcc:
+
+FileList.h:
+
+/usr/include/dirent.h:
+
+/usr/include/i386-linux-gnu/bits/dirent.h:
 
 GlobalVar.h:
 
