--- a/xalnl/src/.deps/PcgMap.Po
+++ b/xalnl/src/.deps/PcgMap.Po
@@ -55,8 +55,15 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/i386-linux-gnu/asm/ioctl.h /usr/include/asm-generic/ioctl.h \
  /usr/include/i386-linux-gnu/bits/ioctl-types.h \
  /usr/include/i386-linux-gnu/sys/ttydefaults.h misc.h turn.h msg-t.h \
- music-kind.h sound-kind.h extern.h PcgCharGraph.h PcgMap.h FileList.h \
- /usr/include/dirent.h /usr/include/i386-linux-gnu/bits/dirent.h \
+ music-kind.h sound-kind.h extern.h dun.h curs.h msg.h \
+ /usr/include/curses.h /usr/include/ncurses_dll.h \
+ /usr/lib/gcc/i586-linux-gnu/4.9/include/stdint.h /usr/include/stdint.h \
+ /usr/include/i386-linux-gnu/bits/wchar.h /usr/include/unctrl.h \
+ /usr/include/curses.h town.h party.h chr.h fight.h spell-kind.h fx.h \
+ abl-kind.h resi.h skill.h mnstr-kind.h item-kind.h gfile.h replay.h \
+ key-item.h key-item-prot.h win-kind.h joy-kind.h stay-inn-kind.h mnstr.h \
+ draw.h pet.h menu.h item.h spell.h vfx-kind.h trap.h item-randm-art.h \
+ request.h menu-amark.h play-rep.h gfile-prot.h PcgCharGraph.h \
  GtkWSCstring.h /usr/include/c++/4.9/string \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h \
@@ -79,7 +86,6 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/c++/4.9/bits/ptr_traits.h \
  /usr/include/c++/4.9/bits/predefined_ops.h \
  /usr/include/c++/4.9/bits/postypes.h /usr/include/c++/4.9/cwchar \
- /usr/include/i386-linux-gnu/bits/wchar.h \
  /usr/include/c++/4.9/bits/allocator.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++allocator.h \
  /usr/include/c++/4.9/ext/new_allocator.h /usr/include/c++/4.9/new \
@@ -102,8 +108,10 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/i386-linux-gnu/bits/sched.h \
  /usr/include/i386-linux-gnu/bits/setjmp.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h \
- /usr/include/c++/4.9/bits/basic_string.tcc GlobalVar.h \
- /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
+ /usr/include/c++/4.9/bits/basic_string.tcc PcgMap.h FileList.h \
+ /usr/include/dirent.h /usr/include/i386-linux-gnu/bits/dirent.h \
+ GlobalVar.h /usr/include/gtk-2.0/gtk/gtk.h \
+ /usr/include/gtk-2.0/gdk/gdk.h \
  /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
  /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
  /usr/include/glib-2.0/gio/gioenums.h /usr/include/glib-2.0/glib-object.h \
@@ -610,35 +618,29 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/gtk-2.0/gtk/gtkoldeditable.h \
  /usr/include/gtk-2.0/gtk/gtkoptionmenu.h \
  /usr/include/gtk-2.0/gtk/gtkpreview.h \
- /usr/include/gtk-2.0/gtk/gtktipsquery.h party.h chr.h dun.h curs.h msg.h \
- /usr/include/curses.h /usr/include/ncurses_dll.h \
- /usr/lib/gcc/i586-linux-gnu/4.9/include/stdint.h /usr/include/stdint.h \
- /usr/include/unctrl.h /usr/include/curses.h fight.h spell-kind.h fx.h \
- abl-kind.h resi.h skill.h mnstr-kind.h item-kind.h gfile.h replay.h \
- key-item.h key-item-prot.h win-kind.h joy-kind.h stay-inn-kind.h draw.h \
- pet.h mnstr.h menu.h item.h spell.h vfx-kind.h trap.h item-randm-art.h \
- request.h SelConf.h GraphConfToken.h GraphConf.h CuiMouse.h GuiMenu.h \
- GuiMessage.h GuiStat.h GuiNum.h GuiInputString.h GuiWords.h GuiReplay.h \
- GuiClassEdit.h GuiSkillEdit.h GuiChrSheet.h SelMbrGraph.h scene.h \
- scene-prot.h PcgDun.h DemoTitle.h Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h \
- GtkMisc.h DemoLastBoss.h DemoCutIn.h DemoGameOver.h DemoEnding.h \
- DemoSpace.h GuiLastBoss.h last-boss.h last-boss-prot.h WinPos.h \
- GameMusic.h /usr/include/SDL/SDL.h /usr/include/SDL/SDL_main.h \
- /usr/include/SDL/SDL_stdinc.h /usr/include/SDL/SDL_config.h \
- /usr/include/SDL/SDL_platform.h /usr/include/inttypes.h \
- /usr/include/iconv.h /usr/include/SDL/begin_code.h \
- /usr/include/SDL/close_code.h /usr/include/SDL/SDL_audio.h \
- /usr/include/SDL/SDL_error.h /usr/include/SDL/SDL_endian.h \
- /usr/include/SDL/SDL_mutex.h /usr/include/SDL/SDL_thread.h \
- /usr/include/SDL/SDL_rwops.h /usr/include/SDL/SDL_cdrom.h \
- /usr/include/SDL/SDL_cpuinfo.h /usr/include/SDL/SDL_events.h \
- /usr/include/SDL/SDL_active.h /usr/include/SDL/SDL_keyboard.h \
- /usr/include/SDL/SDL_keysym.h /usr/include/SDL/SDL_mouse.h \
- /usr/include/SDL/SDL_video.h /usr/include/SDL/SDL_joystick.h \
- /usr/include/SDL/SDL_quit.h /usr/include/SDL/SDL_loadso.h \
- /usr/include/SDL/SDL_timer.h /usr/include/SDL/SDL_version.h \
- /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
- GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
+ /usr/include/gtk-2.0/gtk/gtktipsquery.h SelConf.h GraphConfToken.h \
+ GraphConf.h CuiMouse.h GuiMenu.h GuiMessage.h GuiStat.h GuiNum.h \
+ GuiInputString.h GuiWords.h GuiReplay.h GuiClassEdit.h GuiSkillEdit.h \
+ GuiChrSheet.h SelMbrGraph.h scene.h scene-prot.h PcgDun.h DemoTitle.h \
+ Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h \
+ DemoCutIn.h DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h \
+ last-boss.h last-boss-prot.h WinPos.h GameMusic.h /usr/include/SDL/SDL.h \
+ /usr/include/SDL/SDL_main.h /usr/include/SDL/SDL_stdinc.h \
+ /usr/include/SDL/SDL_config.h /usr/include/SDL/SDL_platform.h \
+ /usr/include/inttypes.h /usr/include/iconv.h \
+ /usr/include/SDL/begin_code.h /usr/include/SDL/close_code.h \
+ /usr/include/SDL/SDL_audio.h /usr/include/SDL/SDL_error.h \
+ /usr/include/SDL/SDL_endian.h /usr/include/SDL/SDL_mutex.h \
+ /usr/include/SDL/SDL_thread.h /usr/include/SDL/SDL_rwops.h \
+ /usr/include/SDL/SDL_cdrom.h /usr/include/SDL/SDL_cpuinfo.h \
+ /usr/include/SDL/SDL_events.h /usr/include/SDL/SDL_active.h \
+ /usr/include/SDL/SDL_keyboard.h /usr/include/SDL/SDL_keysym.h \
+ /usr/include/SDL/SDL_mouse.h /usr/include/SDL/SDL_video.h \
+ /usr/include/SDL/SDL_joystick.h /usr/include/SDL/SDL_quit.h \
+ /usr/include/SDL/SDL_loadso.h /usr/include/SDL/SDL_timer.h \
+ /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_mixer.h \
+ /usr/include/SDL/SDL_types.h GameSound.h GameJoystick.h Key.h \
+ /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
  misc-prot.h GuiMisc.h
 
@@ -810,15 +812,89 @@ sound-kind.h:
 
 extern.h:
 
+dun.h:
+
+curs.h:
+
+msg.h:
+
+/usr/include/curses.h:
+
+/usr/include/ncurses_dll.h:
+
+/usr/lib/gcc/i586-linux-gnu/4.9/include/stdint.h:
+
+/usr/include/stdint.h:
+
+/usr/include/i386-linux-gnu/bits/wchar.h:
+
+/usr/include/unctrl.h:
+
+/usr/include/curses.h:
+
+town.h:
+
+party.h:
+
+chr.h:
+
+fight.h:
+
+spell-kind.h:
+
+fx.h:
+
+abl-kind.h:
+
+resi.h:
+
+skill.h:
+
+mnstr-kind.h:
+
+item-kind.h:
+
+gfile.h:
+
+replay.h:
+
+key-item.h:
+
+key-item-prot.h:
+
+win-kind.h:
+
+joy-kind.h:
+
+stay-inn-kind.h:
+
+mnstr.h:
+
+draw.h:
+
+pet.h:
+
+menu.h:
+
+item.h:
+
+spell.h:
+
+vfx-kind.h:
+
+trap.h:
+
+item-randm-art.h:
+
+request.h:
+
+menu-amark.h:
+
+play-rep.h:
+
+gfile-prot.h:
+
 PcgCharGraph.h:
-
-PcgMap.h:
-
-FileList.h:
-
-/usr/include/dirent.h:
-
-/usr/include/i386-linux-gnu/bits/dirent.h:
 
 GtkWSCstring.h:
 
@@ -869,8 +945,6 @@ GtkWSCstring.h:
 /usr/include/c++/4.9/bits/postypes.h:
 
 /usr/include/c++/4.9/cwchar:
-
-/usr/include/i386-linux-gnu/bits/wchar.h:
 
 /usr/include/c++/4.9/bits/allocator.h:
 
@@ -927,6 +1001,14 @@ GtkWSCstring.h:
 /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h:
 
 /usr/include/c++/4.9/bits/basic_string.tcc:
+
+PcgMap.h:
+
+FileList.h:
+
+/usr/include/dirent.h:
+
+/usr/include/i386-linux-gnu/bits/dirent.h:
 
 GlobalVar.h:
 
@@ -2048,78 +2130,6 @@ GlobalVar.h:
 
 /usr/include/gtk-2.0/gtk/gtktipsquery.h:
 
-party.h:
-
-chr.h:
-
-dun.h:
-
-curs.h:
-
-msg.h:
-
-/usr/include/curses.h:
-
-/usr/include/ncurses_dll.h:
-
-/usr/lib/gcc/i586-linux-gnu/4.9/include/stdint.h:
-
-/usr/include/stdint.h:
-
-/usr/include/unctrl.h:
-
-/usr/include/curses.h:
-
-fight.h:
-
-spell-kind.h:
-
-fx.h:
-
-abl-kind.h:
-
-resi.h:
-
-skill.h:
-
-mnstr-kind.h:
-
-item-kind.h:
-
-gfile.h:
-
-replay.h:
-
-key-item.h:
-
-key-item-prot.h:
-
-win-kind.h:
-
-joy-kind.h:
-
-stay-inn-kind.h:
-
-draw.h:
-
-pet.h:
-
-mnstr.h:
-
-menu.h:
-
-item.h:
-
-spell.h:
-
-vfx-kind.h:
-
-trap.h:
-
-item-randm-art.h:
-
-request.h:
-
 SelConf.h:
 
 GraphConfToken.h:
@@ -2245,8 +2255,6 @@ GameMusic.h:
 /usr/include/SDL/SDL_mixer.h:
 
 /usr/include/SDL/SDL_types.h:
-
-town.h:
 
 GameSound.h:
 
