--- a/xalnl/src/.deps/PcgCharGraph.Po
+++ b/xalnl/src/.deps/PcgCharGraph.Po
@@ -58,14 +58,11 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  music-kind.h sound-kind.h extern.h /usr/include/v8.h \
  /usr/include/v8stdint.h /usr/lib/gcc/i586-linux-gnu/4.9/include/stdint.h \
  /usr/include/stdint.h /usr/include/i386-linux-gnu/bits/wchar.h \
- PcgCharGraph.h GtkWSCstring.h /usr/include/c++/4.9/string \
+ PcgCharGraph.h /usr/include/c++/4.9/vector \
+ /usr/include/c++/4.9/bits/stl_algobase.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/cpu_defines.h \
- /usr/include/c++/4.9/bits/stringfwd.h \
- /usr/include/c++/4.9/bits/memoryfwd.h \
- /usr/include/c++/4.9/bits/char_traits.h \
- /usr/include/c++/4.9/bits/stl_algobase.h \
  /usr/include/c++/4.9/bits/functexcept.h \
  /usr/include/c++/4.9/bits/exception_defines.h \
  /usr/include/c++/4.9/bits/cpp_type_traits.h \
@@ -79,12 +76,22 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/c++/4.9/bits/stl_iterator.h \
  /usr/include/c++/4.9/bits/ptr_traits.h \
  /usr/include/c++/4.9/bits/predefined_ops.h \
- /usr/include/c++/4.9/bits/postypes.h /usr/include/c++/4.9/cwchar \
  /usr/include/c++/4.9/bits/allocator.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++allocator.h \
  /usr/include/c++/4.9/ext/new_allocator.h /usr/include/c++/4.9/new \
  /usr/include/c++/4.9/exception \
  /usr/include/c++/4.9/bits/atomic_lockfree_defines.h \
+ /usr/include/c++/4.9/bits/memoryfwd.h \
+ /usr/include/c++/4.9/bits/stl_construct.h \
+ /usr/include/c++/4.9/ext/alloc_traits.h \
+ /usr/include/c++/4.9/bits/stl_uninitialized.h \
+ /usr/include/c++/4.9/bits/stl_vector.h \
+ /usr/include/c++/4.9/bits/stl_bvector.h \
+ /usr/include/c++/4.9/bits/range_access.h \
+ /usr/include/c++/4.9/bits/vector.tcc GtkWSCstring.h \
+ /usr/include/c++/4.9/string /usr/include/c++/4.9/bits/stringfwd.h \
+ /usr/include/c++/4.9/bits/char_traits.h \
+ /usr/include/c++/4.9/bits/postypes.h /usr/include/c++/4.9/cwchar \
  /usr/include/c++/4.9/bits/localefwd.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++locale.h \
  /usr/include/c++/4.9/clocale /usr/include/locale.h \
@@ -93,7 +100,6 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/c++/4.9/bits/cxxabi_forced.h \
  /usr/include/c++/4.9/bits/stl_function.h \
  /usr/include/c++/4.9/backward/binders.h \
- /usr/include/c++/4.9/bits/range_access.h \
  /usr/include/c++/4.9/bits/basic_string.h \
  /usr/include/c++/4.9/ext/atomicity.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/gthr.h \
@@ -823,23 +829,15 @@ extern.h:
 
 PcgCharGraph.h:
 
-GtkWSCstring.h:
+/usr/include/c++/4.9/vector:
 
-/usr/include/c++/4.9/string:
+/usr/include/c++/4.9/bits/stl_algobase.h:
 
 /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h:
 
 /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h:
 
 /usr/include/i386-linux-gnu/c++/4.9/bits/cpu_defines.h:
-
-/usr/include/c++/4.9/bits/stringfwd.h:
-
-/usr/include/c++/4.9/bits/memoryfwd.h:
-
-/usr/include/c++/4.9/bits/char_traits.h:
-
-/usr/include/c++/4.9/bits/stl_algobase.h:
 
 /usr/include/c++/4.9/bits/functexcept.h:
 
@@ -869,10 +867,6 @@ GtkWSCstring.h:
 
 /usr/include/c++/4.9/bits/predefined_ops.h:
 
-/usr/include/c++/4.9/bits/postypes.h:
-
-/usr/include/c++/4.9/cwchar:
-
 /usr/include/c++/4.9/bits/allocator.h:
 
 /usr/include/i386-linux-gnu/c++/4.9/bits/c++allocator.h:
@@ -884,6 +878,34 @@ GtkWSCstring.h:
 /usr/include/c++/4.9/exception:
 
 /usr/include/c++/4.9/bits/atomic_lockfree_defines.h:
+
+/usr/include/c++/4.9/bits/memoryfwd.h:
+
+/usr/include/c++/4.9/bits/stl_construct.h:
+
+/usr/include/c++/4.9/ext/alloc_traits.h:
+
+/usr/include/c++/4.9/bits/stl_uninitialized.h:
+
+/usr/include/c++/4.9/bits/stl_vector.h:
+
+/usr/include/c++/4.9/bits/stl_bvector.h:
+
+/usr/include/c++/4.9/bits/range_access.h:
+
+/usr/include/c++/4.9/bits/vector.tcc:
+
+GtkWSCstring.h:
+
+/usr/include/c++/4.9/string:
+
+/usr/include/c++/4.9/bits/stringfwd.h:
+
+/usr/include/c++/4.9/bits/char_traits.h:
+
+/usr/include/c++/4.9/bits/postypes.h:
+
+/usr/include/c++/4.9/cwchar:
 
 /usr/include/c++/4.9/bits/localefwd.h:
 
@@ -906,8 +928,6 @@ GtkWSCstring.h:
 /usr/include/c++/4.9/bits/stl_function.h:
 
 /usr/include/c++/4.9/backward/binders.h:
-
-/usr/include/c++/4.9/bits/range_access.h:
 
 /usr/include/c++/4.9/bits/basic_string.h:
 
