--- a/xalnl/src/.deps/PcgMap.Po
+++ b/xalnl/src/.deps/PcgMap.Po
@@ -63,7 +63,7 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  abl-kind.h resi.h skill.h mnstr-kind.h item-kind.h gfile.h replay.h \
  key-item.h key-item-prot.h win-kind.h joy-kind.h stay-inn-kind.h mnstr.h \
  draw.h pet.h menu.h item.h spell.h vfx-kind.h trap.h item-randm-art.h \
- request.h menu-amark.h play-rep.h gfile-prot.h PcgCharGraph.h \
+ request.h menu-amark.h play-rep.h gfile-prot.h PcgTile.h \
  /usr/include/c++/4.9/vector /usr/include/c++/4.9/bits/stl_algobase.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h \
@@ -113,10 +113,10 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/i386-linux-gnu/bits/sched.h \
  /usr/include/i386-linux-gnu/bits/setjmp.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h \
- /usr/include/c++/4.9/bits/basic_string.tcc PcgMap.h FileList.h \
- /usr/include/dirent.h /usr/include/i386-linux-gnu/bits/dirent.h \
- GlobalVar.h /usr/include/gtk-2.0/gtk/gtk.h \
- /usr/include/gtk-2.0/gdk/gdk.h \
+ /usr/include/c++/4.9/bits/basic_string.tcc PcgCharGraph.h PcgMap.h \
+ FileList.h /usr/include/dirent.h \
+ /usr/include/i386-linux-gnu/bits/dirent.h GlobalVar.h \
+ /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
  /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
  /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
  /usr/include/glib-2.0/gio/gioenums.h /usr/include/glib-2.0/glib-object.h \
@@ -899,7 +899,7 @@ play-rep.h:
 
 gfile-prot.h:
 
-PcgCharGraph.h:
+PcgTile.h:
 
 /usr/include/c++/4.9/vector:
 
@@ -1020,6 +1020,8 @@ GtkWSCstring.h:
 /usr/include/i386-linux-gnu/c++/4.9/bits/atomic_word.h:
 
 /usr/include/c++/4.9/bits/basic_string.tcc:
+
+PcgCharGraph.h:
 
 PcgMap.h:
 
