--- a/xalnl/src/.deps/PcgMap.Po
+++ b/xalnl/src/.deps/PcgMap.Po
@@ -63,7 +63,7 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  abl-kind.h resi.h skill.h mnstr-kind.h item-kind.h gfile.h replay.h \
  key-item.h key-item-prot.h win-kind.h joy-kind.h stay-inn-kind.h mnstr.h \
  draw.h pet.h menu.h item.h spell.h vfx-kind.h trap.h item-randm-art.h \
- request.h menu-amark.h play-rep.h gfile-prot.h PcgTile.h \
+ request.h menu-amark.h play-rep.h gmain-prot.h gfile-prot.h PcgTile.h \
  /usr/include/c++/4.9/vector /usr/include/c++/4.9/bits/stl_algobase.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/c++config.h \
  /usr/include/i386-linux-gnu/c++/4.9/bits/os_defines.h \
@@ -896,6 +896,8 @@ request.h:
 menu-amark.h:
 
 play-rep.h:
+
+gmain-prot.h:
 
 gfile-prot.h:
 
