--- a/xalnl/src/.deps/PcgCharGraph.Po
+++ b/xalnl/src/.deps/PcgCharGraph.Po
@@ -647,7 +647,7 @@ PcgCharGraph.o: PcgCharGraph.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
  GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- misc-prot.h GuiMisc.h
+ gmain-prot.h misc-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2284,6 +2284,8 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 misc-prot.h:
 
