--- a/xalnl/src/.deps/DemoCutIn.Po
+++ b/xalnl/src/.deps/DemoCutIn.Po
@@ -639,7 +639,7 @@ DemoCutIn.o: DemoCutIn.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
  GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- misc-prot.h GuiMisc.h
+ gmain-prot.h misc-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2256,6 +2256,8 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 misc-prot.h:
 
