--- a/xalnl/src/.deps/DemoTitle.Po
+++ b/xalnl/src/.deps/DemoTitle.Po
@@ -639,7 +639,7 @@ DemoTitle.o: DemoTitle.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  /usr/include/SDL/SDL_types.h town.h GameSound.h GameJoystick.h Key.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- GuiMisc.h
+ gmain-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2260,5 +2260,7 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 GuiMisc.h:
