--- a/xalnl/src/.deps/GameMusic.Po
+++ b/xalnl/src/.deps/GameMusic.Po
@@ -642,7 +642,7 @@ GameMusic.o: GameMusic.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  last-boss.h last-boss-prot.h WinPos.h GameSound.h GameJoystick.h Key.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- GuiMisc.h
+ gmain-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2269,5 +2269,7 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 GuiMisc.h:
