--- a/xalnl/src/.deps/GameSound.Po
+++ b/xalnl/src/.deps/GameSound.Po
@@ -641,7 +641,7 @@ GameSound.o: GameSound.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  last-boss.h last-boss-prot.h WinPos.h GameMusic.h town.h GameJoystick.h \
  Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- misc-prot.h GuiMisc.h
+ gmain-prot.h misc-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2260,6 +2260,8 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 misc-prot.h:
 
