--- a/xalnl/src/.deps/GuiNum.Po
+++ b/xalnl/src/.deps/GuiNum.Po
@@ -63,8 +63,8 @@ GuiNum.o: GuiNum.cpp /usr/include/stdc-predef.h gmain.h config.h \
  skill.h mnstr-kind.h item-kind.h gfile.h replay.h key-item.h \
  key-item-prot.h win-kind.h joy-kind.h vfx-kind.h trap.h item-randm-art.h \
  party.h stay-inn-kind.h menu-prot.h GuiNum.h inc.h draw.h pet.h mnstr.h \
- request.h misc-prot.h draw-prot.h /usr/include/gtk-2.0/gtk/gtk.h \
- /usr/include/gtk-2.0/gdk/gdk.h \
+ request.h gmain-prot.h misc-prot.h draw-prot.h \
+ /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
  /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
  /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
  /usr/include/glib-2.0/gio/gioenums.h /usr/include/glib-2.0/glib-object.h \
@@ -886,6 +886,8 @@ pet.h:
 mnstr.h:
 
 request.h:
+
+gmain-prot.h:
 
 misc-prot.h:
 
