--- a/xalnl/src/.deps/PcgTile.Po
+++ b/xalnl/src/.deps/PcgTile.Po
@@ -646,7 +646,7 @@ PcgTile.o: PcgTile.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
  GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
- misc-prot.h GuiMisc.h
+ gmain-prot.h misc-prot.h GuiMisc.h
 
 /usr/include/stdc-predef.h:
 
@@ -2283,6 +2283,8 @@ Key.h:
 MouseMotion.h:
 
 draw-prot.h:
+
+gmain-prot.h:
 
 misc-prot.h:
 
