--- a/xalnl/src/.deps/GameJoystick.Po
+++ b/xalnl/src/.deps/GameJoystick.Po
@@ -635,7 +635,10 @@ GameJoystick.o: GameJoystick.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  SelMbrGraph.h scene.h scene-prot.h PcgDun.h DemoTitle.h Pcg.h \
  GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h DemoCutIn.h \
  DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h last-boss.h \
- last-boss-prot.h WinPos.h FileList.h GameMusic.h \
+ last-boss-prot.h /usr/include/SDL/SDL_image.h /usr/include/SDL/SDL.h \
+ /usr/include/SDL/SDL_opengl.h /usr/include/GL/gl.h \
+ /usr/include/GL/glext.h /usr/include/GL/glu.h /usr/include/GL/glut.h \
+ /usr/include/GL/freeglut_std.h WinPos.h FileList.h GameMusic.h \
  /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
  GameSound.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
@@ -2234,6 +2237,22 @@ GuiLastBoss.h:
 last-boss.h:
 
 last-boss-prot.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
 
 WinPos.h:
 
