--- a/xalnl/src/.deps/GameSound.Po
+++ b/xalnl/src/.deps/GameSound.Po
@@ -638,8 +638,12 @@ GameSound.o: GameSound.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  GuiChrSheet.h SelMbrGraph.h scene.h scene-prot.h PcgDun.h DemoTitle.h \
  Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h \
  DemoCutIn.h DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h \
- last-boss.h last-boss-prot.h WinPos.h GameMusic.h town.h GameJoystick.h \
- Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
+ last-boss.h last-boss-prot.h /usr/include/SDL/SDL_image.h \
+ /usr/include/SDL/SDL.h /usr/include/SDL/SDL_opengl.h \
+ /usr/include/GL/gl.h /usr/include/GL/glext.h /usr/include/GL/glu.h \
+ /usr/include/GL/glut.h /usr/include/GL/freeglut_std.h WinPos.h \
+ GameMusic.h town.h GameJoystick.h Key.h \
+ /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
  gmain-prot.h misc-prot.h GuiMisc.h
 
@@ -2242,6 +2246,22 @@ GuiLastBoss.h:
 last-boss.h:
 
 last-boss-prot.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
 
 WinPos.h:
 
