--- a/xalnl/src/.deps/GuiMessage.Po
+++ b/xalnl/src/.deps/GuiMessage.Po
@@ -624,23 +624,27 @@ GuiMessage.o: GuiMessage.cpp /usr/include/stdc-predef.h inc.h gmain.h \
  GuiChrSheet.h SelMbrGraph.h scene.h scene-prot.h PcgDun.h DemoTitle.h \
  Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h DemoLastBoss.h DemoCutIn.h \
  DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h last-boss.h \
- last-boss-prot.h WinPos.h FileList.h GameMusic.h /usr/include/SDL/SDL.h \
- /usr/include/SDL/SDL_main.h /usr/include/SDL/SDL_stdinc.h \
- /usr/include/SDL/SDL_config.h /usr/include/SDL/SDL_platform.h \
- /usr/include/inttypes.h /usr/include/iconv.h \
- /usr/include/SDL/begin_code.h /usr/include/SDL/close_code.h \
- /usr/include/SDL/SDL_audio.h /usr/include/SDL/SDL_error.h \
- /usr/include/SDL/SDL_endian.h /usr/include/SDL/SDL_mutex.h \
- /usr/include/SDL/SDL_thread.h /usr/include/SDL/SDL_rwops.h \
- /usr/include/SDL/SDL_cdrom.h /usr/include/SDL/SDL_cpuinfo.h \
- /usr/include/SDL/SDL_events.h /usr/include/SDL/SDL_active.h \
- /usr/include/SDL/SDL_keyboard.h /usr/include/SDL/SDL_keysym.h \
- /usr/include/SDL/SDL_mouse.h /usr/include/SDL/SDL_video.h \
- /usr/include/SDL/SDL_joystick.h /usr/include/SDL/SDL_quit.h \
- /usr/include/SDL/SDL_loadso.h /usr/include/SDL/SDL_timer.h \
- /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_mixer.h \
- /usr/include/SDL/SDL_types.h town.h GameSound.h GameJoystick.h \
- MouseMotion.h draw-prot.h main-gtk-prot.h gmain-prot.h misc-prot.h
+ last-boss-prot.h /usr/include/SDL/SDL.h /usr/include/SDL/SDL_main.h \
+ /usr/include/SDL/SDL_stdinc.h /usr/include/SDL/SDL_config.h \
+ /usr/include/SDL/SDL_platform.h /usr/include/inttypes.h \
+ /usr/include/iconv.h /usr/include/SDL/begin_code.h \
+ /usr/include/SDL/close_code.h /usr/include/SDL/SDL_audio.h \
+ /usr/include/SDL/SDL_error.h /usr/include/SDL/SDL_endian.h \
+ /usr/include/SDL/SDL_mutex.h /usr/include/SDL/SDL_thread.h \
+ /usr/include/SDL/SDL_rwops.h /usr/include/SDL/SDL_cdrom.h \
+ /usr/include/SDL/SDL_cpuinfo.h /usr/include/SDL/SDL_events.h \
+ /usr/include/SDL/SDL_active.h /usr/include/SDL/SDL_keyboard.h \
+ /usr/include/SDL/SDL_keysym.h /usr/include/SDL/SDL_mouse.h \
+ /usr/include/SDL/SDL_video.h /usr/include/SDL/SDL_joystick.h \
+ /usr/include/SDL/SDL_quit.h /usr/include/SDL/SDL_loadso.h \
+ /usr/include/SDL/SDL_timer.h /usr/include/SDL/SDL_version.h \
+ /usr/include/SDL/SDL_image.h /usr/include/SDL/SDL.h \
+ /usr/include/SDL/SDL_opengl.h /usr/include/GL/gl.h \
+ /usr/include/GL/glext.h /usr/include/GL/glu.h /usr/include/GL/glut.h \
+ /usr/include/GL/freeglut_std.h WinPos.h FileList.h GameMusic.h \
+ /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
+ GameSound.h GameJoystick.h MouseMotion.h draw-prot.h main-gtk-prot.h \
+ gmain-prot.h misc-prot.h
 
 /usr/include/stdc-predef.h:
 
@@ -2186,12 +2190,6 @@ last-boss.h:
 
 last-boss-prot.h:
 
-WinPos.h:
-
-FileList.h:
-
-GameMusic.h:
-
 /usr/include/SDL/SDL.h:
 
 /usr/include/SDL/SDL_main.h:
@@ -2247,6 +2245,28 @@ GameMusic.h:
 /usr/include/SDL/SDL_timer.h:
 
 /usr/include/SDL/SDL_version.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
+
+WinPos.h:
+
+FileList.h:
+
+GameMusic.h:
 
 /usr/include/SDL/SDL_mixer.h:
 
