--- a/xalnl/src/.deps/PcgDun.Po
+++ b/xalnl/src/.deps/PcgDun.Po
@@ -622,7 +622,24 @@ PcgDun.o: PcgDun.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/c++/4.9/bits/basic_string.tcc GraphConfToken.h DemoTitle.h \
  Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h \
  DemoCutIn.h DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h \
- PcgMap.h /usr/include/c++/4.9/vector \
+ /usr/include/SDL/SDL.h /usr/include/SDL/SDL_main.h \
+ /usr/include/SDL/SDL_stdinc.h /usr/include/SDL/SDL_config.h \
+ /usr/include/SDL/SDL_platform.h /usr/include/inttypes.h \
+ /usr/include/iconv.h /usr/include/SDL/begin_code.h \
+ /usr/include/SDL/close_code.h /usr/include/SDL/SDL_audio.h \
+ /usr/include/SDL/SDL_error.h /usr/include/SDL/SDL_endian.h \
+ /usr/include/SDL/SDL_mutex.h /usr/include/SDL/SDL_thread.h \
+ /usr/include/SDL/SDL_rwops.h /usr/include/SDL/SDL_cdrom.h \
+ /usr/include/SDL/SDL_cpuinfo.h /usr/include/SDL/SDL_events.h \
+ /usr/include/SDL/SDL_active.h /usr/include/SDL/SDL_keyboard.h \
+ /usr/include/SDL/SDL_keysym.h /usr/include/SDL/SDL_mouse.h \
+ /usr/include/SDL/SDL_video.h /usr/include/SDL/SDL_joystick.h \
+ /usr/include/SDL/SDL_quit.h /usr/include/SDL/SDL_loadso.h \
+ /usr/include/SDL/SDL_timer.h /usr/include/SDL/SDL_version.h \
+ /usr/include/SDL/SDL_image.h /usr/include/SDL/SDL.h \
+ /usr/include/SDL/SDL_opengl.h /usr/include/GL/gl.h \
+ /usr/include/GL/glext.h /usr/include/GL/glu.h /usr/include/GL/glut.h \
+ /usr/include/GL/freeglut_std.h PcgMap.h /usr/include/c++/4.9/vector \
  /usr/include/c++/4.9/bits/stl_construct.h \
  /usr/include/c++/4.9/ext/alloc_traits.h \
  /usr/include/c++/4.9/bits/stl_uninitialized.h \
@@ -631,21 +648,7 @@ PcgDun.o: PcgDun.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/c++/4.9/bits/vector.tcc FileList.h GlobalVar.h SelConf.h \
  CuiMouse.h GuiMenu.h GuiMessage.h GuiStat.h GuiNum.h GuiInputString.h \
  GuiWords.h GuiReplay.h GuiClassEdit.h GuiSkillEdit.h GuiChrSheet.h \
- SelMbrGraph.h WinPos.h GameMusic.h /usr/include/SDL/SDL.h \
- /usr/include/SDL/SDL_main.h /usr/include/SDL/SDL_stdinc.h \
- /usr/include/SDL/SDL_config.h /usr/include/SDL/SDL_platform.h \
- /usr/include/inttypes.h /usr/include/iconv.h \
- /usr/include/SDL/begin_code.h /usr/include/SDL/close_code.h \
- /usr/include/SDL/SDL_audio.h /usr/include/SDL/SDL_error.h \
- /usr/include/SDL/SDL_endian.h /usr/include/SDL/SDL_mutex.h \
- /usr/include/SDL/SDL_thread.h /usr/include/SDL/SDL_rwops.h \
- /usr/include/SDL/SDL_cdrom.h /usr/include/SDL/SDL_cpuinfo.h \
- /usr/include/SDL/SDL_events.h /usr/include/SDL/SDL_active.h \
- /usr/include/SDL/SDL_keyboard.h /usr/include/SDL/SDL_keysym.h \
- /usr/include/SDL/SDL_mouse.h /usr/include/SDL/SDL_video.h \
- /usr/include/SDL/SDL_joystick.h /usr/include/SDL/SDL_quit.h \
- /usr/include/SDL/SDL_loadso.h /usr/include/SDL/SDL_timer.h \
- /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_mixer.h \
+ SelMbrGraph.h WinPos.h GameMusic.h /usr/include/SDL/SDL_mixer.h \
  /usr/include/SDL/SDL_types.h GameSound.h GameJoystick.h Key.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h PcgDunTab.h
@@ -2190,56 +2193,6 @@ DemoSpace.h:
 
 GuiLastBoss.h:
 
-PcgMap.h:
-
-/usr/include/c++/4.9/vector:
-
-/usr/include/c++/4.9/bits/stl_construct.h:
-
-/usr/include/c++/4.9/ext/alloc_traits.h:
-
-/usr/include/c++/4.9/bits/stl_uninitialized.h:
-
-/usr/include/c++/4.9/bits/stl_vector.h:
-
-/usr/include/c++/4.9/bits/stl_bvector.h:
-
-/usr/include/c++/4.9/bits/vector.tcc:
-
-FileList.h:
-
-GlobalVar.h:
-
-SelConf.h:
-
-CuiMouse.h:
-
-GuiMenu.h:
-
-GuiMessage.h:
-
-GuiStat.h:
-
-GuiNum.h:
-
-GuiInputString.h:
-
-GuiWords.h:
-
-GuiReplay.h:
-
-GuiClassEdit.h:
-
-GuiSkillEdit.h:
-
-GuiChrSheet.h:
-
-SelMbrGraph.h:
-
-WinPos.h:
-
-GameMusic.h:
-
 /usr/include/SDL/SDL.h:
 
 /usr/include/SDL/SDL_main.h:
@@ -2295,6 +2248,72 @@ GameMusic.h:
 /usr/include/SDL/SDL_timer.h:
 
 /usr/include/SDL/SDL_version.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
+
+PcgMap.h:
+
+/usr/include/c++/4.9/vector:
+
+/usr/include/c++/4.9/bits/stl_construct.h:
+
+/usr/include/c++/4.9/ext/alloc_traits.h:
+
+/usr/include/c++/4.9/bits/stl_uninitialized.h:
+
+/usr/include/c++/4.9/bits/stl_vector.h:
+
+/usr/include/c++/4.9/bits/stl_bvector.h:
+
+/usr/include/c++/4.9/bits/vector.tcc:
+
+FileList.h:
+
+GlobalVar.h:
+
+SelConf.h:
+
+CuiMouse.h:
+
+GuiMenu.h:
+
+GuiMessage.h:
+
+GuiStat.h:
+
+GuiNum.h:
+
+GuiInputString.h:
+
+GuiWords.h:
+
+GuiReplay.h:
+
+GuiClassEdit.h:
+
+GuiSkillEdit.h:
+
+GuiChrSheet.h:
+
+SelMbrGraph.h:
+
+WinPos.h:
+
+GameMusic.h:
 
 /usr/include/SDL/SDL_mixer.h:
 
