--- a/xalnl/src/.deps/PcgMap.Po
+++ b/xalnl/src/.deps/PcgMap.Po
@@ -629,7 +629,7 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  GuiChrSheet.h SelMbrGraph.h scene.h scene-prot.h PcgDun.h DemoTitle.h \
  Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h \
  DemoCutIn.h DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h \
- last-boss.h last-boss-prot.h WinPos.h GameMusic.h /usr/include/SDL/SDL.h \
+ last-boss.h last-boss-prot.h /usr/include/SDL/SDL.h \
  /usr/include/SDL/SDL_main.h /usr/include/SDL/SDL_stdinc.h \
  /usr/include/SDL/SDL_config.h /usr/include/SDL/SDL_platform.h \
  /usr/include/inttypes.h /usr/include/iconv.h \
@@ -643,9 +643,12 @@ PcgMap.o: PcgMap.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/SDL/SDL_mouse.h /usr/include/SDL/SDL_video.h \
  /usr/include/SDL/SDL_joystick.h /usr/include/SDL/SDL_quit.h \
  /usr/include/SDL/SDL_loadso.h /usr/include/SDL/SDL_timer.h \
- /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_mixer.h \
- /usr/include/SDL/SDL_types.h GameSound.h GameJoystick.h Key.h \
- /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
+ /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_image.h \
+ /usr/include/SDL/SDL.h /usr/include/SDL/SDL_opengl.h \
+ /usr/include/GL/gl.h /usr/include/GL/glext.h /usr/include/GL/glu.h \
+ /usr/include/GL/glut.h /usr/include/GL/freeglut_std.h WinPos.h \
+ GameMusic.h /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h \
+ GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
  misc-prot.h GuiMisc.h
 
@@ -2215,10 +2218,6 @@ last-boss.h:
 
 last-boss-prot.h:
 
-WinPos.h:
-
-GameMusic.h:
-
 /usr/include/SDL/SDL.h:
 
 /usr/include/SDL/SDL_main.h:
@@ -2274,6 +2273,26 @@ GameMusic.h:
 /usr/include/SDL/SDL_timer.h:
 
 /usr/include/SDL/SDL_version.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
+
+WinPos.h:
+
+GameMusic.h:
 
 /usr/include/SDL/SDL_mixer.h:
 
