--- a/xalnl/src/.deps/PcgTile.Po
+++ b/xalnl/src/.deps/PcgTile.Po
@@ -628,8 +628,8 @@ PcgTile.o: PcgTile.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  GuiClassEdit.h GuiSkillEdit.h GuiChrSheet.h SelMbrGraph.h scene.h \
  scene-prot.h PcgDun.h DemoTitle.h Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h \
  GtkMisc.h DemoLastBoss.h DemoCutIn.h DemoGameOver.h DemoEnding.h \
- DemoSpace.h GuiLastBoss.h last-boss.h last-boss-prot.h WinPos.h \
- GameMusic.h /usr/include/SDL/SDL.h /usr/include/SDL/SDL_main.h \
+ DemoSpace.h GuiLastBoss.h last-boss.h last-boss-prot.h \
+ /usr/include/SDL/SDL.h /usr/include/SDL/SDL_main.h \
  /usr/include/SDL/SDL_stdinc.h /usr/include/SDL/SDL_config.h \
  /usr/include/SDL/SDL_platform.h /usr/include/inttypes.h \
  /usr/include/iconv.h /usr/include/SDL/begin_code.h \
@@ -643,6 +643,10 @@ PcgTile.o: PcgTile.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/SDL/SDL_video.h /usr/include/SDL/SDL_joystick.h \
  /usr/include/SDL/SDL_quit.h /usr/include/SDL/SDL_loadso.h \
  /usr/include/SDL/SDL_timer.h /usr/include/SDL/SDL_version.h \
+ /usr/include/SDL/SDL_image.h /usr/include/SDL/SDL.h \
+ /usr/include/SDL/SDL_opengl.h /usr/include/GL/gl.h \
+ /usr/include/GL/glext.h /usr/include/GL/glu.h /usr/include/GL/glut.h \
+ /usr/include/GL/freeglut_std.h WinPos.h GameMusic.h \
  /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h town.h \
  GameSound.h GameJoystick.h Key.h /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
@@ -2204,10 +2208,6 @@ last-boss.h:
 
 last-boss-prot.h:
 
-WinPos.h:
-
-GameMusic.h:
-
 /usr/include/SDL/SDL.h:
 
 /usr/include/SDL/SDL_main.h:
@@ -2263,6 +2263,26 @@ GameMusic.h:
 /usr/include/SDL/SDL_timer.h:
 
 /usr/include/SDL/SDL_version.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
+
+WinPos.h:
+
+GameMusic.h:
 
 /usr/include/SDL/SDL_mixer.h:
 
