--- a/xalnl/src/.deps/call.Po
+++ b/xalnl/src/.deps/call.Po
@@ -619,10 +619,7 @@ call.o: call.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/c++/4.9/bits/basic_string.tcc GraphConfToken.h DemoTitle.h \
  Pcg.h GtkWSDimage.h GtkWSDmwindowDev.h GtkMisc.h DemoLastBoss.h \
  DemoCutIn.h DemoGameOver.h DemoEnding.h DemoSpace.h GuiLastBoss.h \
- last-boss.h last-boss-prot.h SelMbrGraph.h scene.h scene-prot.h \
- GlobalVar.h SelConf.h CuiMouse.h GuiMessage.h GuiStat.h GuiNum.h \
- GuiInputString.h GuiWords.h GuiReplay.h GuiClassEdit.h GuiSkillEdit.h \
- GuiChrSheet.h WinPos.h FileList.h GameMusic.h /usr/include/SDL/SDL.h \
+ last-boss.h last-boss-prot.h /usr/include/SDL/SDL.h \
  /usr/include/SDL/SDL_main.h /usr/include/SDL/SDL_stdinc.h \
  /usr/include/SDL/SDL_config.h /usr/include/SDL/SDL_platform.h \
  /usr/include/inttypes.h /usr/include/iconv.h \
@@ -636,8 +633,15 @@ call.o: call.cpp /usr/include/stdc-predef.h inc.h gmain.h config.h \
  /usr/include/SDL/SDL_mouse.h /usr/include/SDL/SDL_video.h \
  /usr/include/SDL/SDL_joystick.h /usr/include/SDL/SDL_quit.h \
  /usr/include/SDL/SDL_loadso.h /usr/include/SDL/SDL_timer.h \
- /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_mixer.h \
- /usr/include/SDL/SDL_types.h town.h GameSound.h GameJoystick.h Key.h \
+ /usr/include/SDL/SDL_version.h /usr/include/SDL/SDL_image.h \
+ /usr/include/SDL/SDL.h /usr/include/SDL/SDL_opengl.h \
+ /usr/include/GL/gl.h /usr/include/GL/glext.h /usr/include/GL/glu.h \
+ /usr/include/GL/glut.h /usr/include/GL/freeglut_std.h SelMbrGraph.h \
+ scene.h scene-prot.h GlobalVar.h SelConf.h CuiMouse.h GuiMessage.h \
+ GuiStat.h GuiNum.h GuiInputString.h GuiWords.h GuiReplay.h \
+ GuiClassEdit.h GuiSkillEdit.h GuiChrSheet.h WinPos.h FileList.h \
+ GameMusic.h /usr/include/SDL/SDL_mixer.h /usr/include/SDL/SDL_types.h \
+ town.h GameSound.h GameJoystick.h Key.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms.h \
  /usr/include/gtk-2.0/gdk/gdkkeysyms-compat.h MouseMotion.h draw-prot.h \
  gmain-prot.h misc-prot.h chr-prot.h main-gtk-prot.h call-prot.h \
@@ -2149,42 +2153,6 @@ last-boss.h:
 
 last-boss-prot.h:
 
-SelMbrGraph.h:
-
-scene.h:
-
-scene-prot.h:
-
-GlobalVar.h:
-
-SelConf.h:
-
-CuiMouse.h:
-
-GuiMessage.h:
-
-GuiStat.h:
-
-GuiNum.h:
-
-GuiInputString.h:
-
-GuiWords.h:
-
-GuiReplay.h:
-
-GuiClassEdit.h:
-
-GuiSkillEdit.h:
-
-GuiChrSheet.h:
-
-WinPos.h:
-
-FileList.h:
-
-GameMusic.h:
-
 /usr/include/SDL/SDL.h:
 
 /usr/include/SDL/SDL_main.h:
@@ -2240,6 +2208,58 @@ GameMusic.h:
 /usr/include/SDL/SDL_timer.h:
 
 /usr/include/SDL/SDL_version.h:
+
+/usr/include/SDL/SDL_image.h:
+
+/usr/include/SDL/SDL.h:
+
+/usr/include/SDL/SDL_opengl.h:
+
+/usr/include/GL/gl.h:
+
+/usr/include/GL/glext.h:
+
+/usr/include/GL/glu.h:
+
+/usr/include/GL/glut.h:
+
+/usr/include/GL/freeglut_std.h:
+
+SelMbrGraph.h:
+
+scene.h:
+
+scene-prot.h:
+
+GlobalVar.h:
+
+SelConf.h:
+
+CuiMouse.h:
+
+GuiMessage.h:
+
+GuiStat.h:
+
+GuiNum.h:
+
+GuiInputString.h:
+
+GuiWords.h:
+
+GuiReplay.h:
+
+GuiClassEdit.h:
+
+GuiSkillEdit.h:
+
+GuiChrSheet.h:
+
+WinPos.h:
+
+FileList.h:
+
+GameMusic.h:
 
 /usr/include/SDL/SDL_mixer.h:
 
